[package]
name = "rseek"
version = "0.1.0"
edition = "2024"
authors = ["sam0x17"]
description = "rseek is an adapter for reqwest that allows seeking in the response body stream using AsyncSeek"
keywords = ["reqwest", "seek", "async", "http"]

[dependencies]
bytes = "1.10.1"
futures = "0"
reqwest = "0"
tokio = { version = "1", features = ["full"] }
