[package]
name = "rseek"
version = "0.1.8"
edition = "2024"
authors = ["sam0x17"]
description = "rseek is an adapter for reqwest that allows seeking in the response body stream using AsyncSeek"
keywords = ["reqwest", "seek", "async", "http"]
license = "MIT"
repository = "https://github.com/sam0x17/rseek"
documentation = "https://docs.rs/rseek/latest/rseek/"

[dependencies]
bytes = "1"
futures = "0"
reqwest = { version = "0", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
